# inteligentna-trawa

./: .coveragerc  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
inteligentna_trawa/: __init__.py
inteligentna_trawa/actuators/: base.py  gpio_pin.py
inteligentna_trawa/sensors/: base.py  logic.py  sunlight.py
inteligentna_trawa/tests/: test_inteligentna_trawa.py
releasenotes/source/: conf.py  index.rst
