[metadata]
name = inteligentna-trawa
summary = OpenStack Boilerplate contains all the boilerplate you need to create an OpenStack package.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    inteligentna_trawa

[compile_catalog]
directory = inteligentna_trawa/locale
domain = inteligentna_trawa

[update_catalog]
domain = inteligentna_trawa
output_dir = inteligentna_trawa/locale
input_file = inteligentna_trawa/locale/inteligentna_trawa.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = inteligentna_trawa/locale/inteligentna_trawa.pot
