[metadata]
name = inteligentna-trawa
summary = Project controlling valve that waters my lawn
author = Michał Dulko
author-email = michal.dulko@gmail.com
python-requires = >=3.6
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    inteligentna_trawa
